<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditNoteFragment">

    <Spinner
        android:id="@+id/course_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_note_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/title"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="@+id/course_spinner"
        app:layout_constraintStart_toStartOf="@+id/course_spinner"
        app:layout_constraintTop_toBottomOf="@+id/course_spinner" />

    <EditText
        android:id="@+id/et_note_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/text"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/et_note_title"
        app:layout_constraintStart_toStartOf="@+id/course_spinner"
        app:layout_constraintTop_toBottomOf="@+id/et_note_title" />

</androidx.constraintlayout.widget.ConstraintLayout>